# hwp-structure-extractor

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-mcp.txt  requirements.txt
docs/: API.md  ARCHITECTURE.md  GITHUB_UPLOAD_GUIDE.md  MCP_SETUP.md  SKILL_SETUP.md
examples/: expected_output_schema.json  sample_usage.md
legacy/: hwp_full_parser_v30_original.py
scripts/: smoke_test.sh
src/hwp_full_parser/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_basic_import.py
